Sass/css/codeStyle.css
* {
  font-family: 'Montserrat', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 17px;
  letter-spacing: 0.05em;
  color: #fff;
  transition: 0.2s;
}

body {
  display: flex;
}

.wrapper {
  width: 100%;
  height: 100vh;
  background: #03262D;
  overflow: hidden;
}

.settings-menu {
  background: #142C36;
  border-left: 1px solid #767676;
  box-sizing: border-box;
  backdrop-filter: blur(24px);
  right: 0px;
  top: 0%;
  position: absolute;
  width: 240px;
  height: 100vh;
  z-index: 949;
  transform: translateX(240px);
}

.settings-menu-active {
  transform: translateX(0px);
}

.settings-menu__close-cross {
  font-size: 20px;
  float: right;
  cursor: pointer;
  position: relative;
  top: 15px;
  right: 15px;
}

.settings-menu__title {
  text-align: center;
  font-weight: 500;
  font-size: 25px;
  line-height: 30px;
  margin-top: 25px;
}

.settings-menu__settings-list {
  margin-top: 25px;
}

.settings-menu__setting {
  width: 240px;
  height: 50px;
  display: flex;
  align-items: center;
  padding-left: 15px;
  cursor: pointer;
}

.settings-menu__setting:hover {
  background: rgba(255, 255, 255, 0.04);
}

.settings-menu__icon {
  width: 24px;
  height: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 15px;
  opacity: 0.8;
  border-radius: 5px;
}

.settings-menu__expand-icon {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 10px;
}

.settings-menu__translator-wrapp {
  display: flex;
  justify-content: center;
  margin-top: 5px;
  align-items: center;
  flex-direction: column;
  display: none;
}

.settings-menu__translator-input-wrapp {
  display: flex;
  justify-content: center;
  align-items: center;
}

.settings-menu__translator-input {
  display: block;
  width: 180px;
  height: 28px;
  left: 810px;
  top: 504px;
  padding-left: 7px;
  background: #10242D;
  border: 0.6px solid rgba(83, 83, 83, 0.37);
  box-sizing: border-box;
  border-radius: 5px;
  color: rgba(255, 255, 255, 0.7);
}

.settings-menu__translator-input:focus {
  border: 0.6px solid rgba(255, 255, 255, 0.37);
}

.settings-menu__translator-input-RU {
  margin-bottom: 10px;
}

.settings-menu__translator-reverse-lang {
  margin-left: 10px;
  cursor: pointer;
}

.settings-menu__translator-btn {
  width: 122px;
  height: 28px;
  background: rgba(7, 19, 24, 0.74);
  border: 0.6px solid rgba(83, 83, 83, 0.37);
  box-sizing: border-box;
  border-radius: 3px;
  margin-top: 10px;
  margin-right: 25px;
  color: #68757B;
}

.settings-menu__translator-btn:hover {
  opacity: 0.9;
}

.settings-menu__translator-btn:active {
  border: 0.6px solid #68757B;
}

.wrapper {
  max-width: 100%;
  margin: 0 auto;
}

.header {
  background-color: #011D22;
  padding: 0px 110px;
}

.header__container {
  width: 100%;
  margin: 0 auto;
}

.header__content,
.header__block-left {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 80px;
}

.header__title {
  font-weight: 500;
  font-size: 18px;
  line-height: 22px;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #D0FFF7;
}

.header__menu {
  width: 55px;
  height: 55px;
  position: relative;
}

.header__menu img {
  position: absolute;
  object-fit: cover;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

.search-lang__btn {
  font-weight: 400;
  font-size: 15px;
  line-height: 18px;
  padding: 9px 21px;
  margin: 0 65px;
  cursor: pointer;
  background: rgba(0, 0, 0, 0.34);
  backdrop-filter: blur(10px);
  border-radius: 3px;
}

.header__search-lang.active .search-lang__btn {
  visibility: hidden;
}

.header__search-lang.active .search-lang__block {
  display: block;
  width: 266px;
  padding: 14px 16px 10px;
  position: absolute;
  top: 0;
  left: -30%;
  z-index: 5;
  background: rgba(40, 40, 40, 0.153);
  border: 0.5px solid rgba(130, 130, 130, 0.2);
  box-sizing: border-box;
  border-radius: 7px;
  filter: drop-shadow(1px 0px 8px rgba(49, 163, 142, 0.03));
  backdrop-filter: blur(45px);
}

.header__search-lang {
  position: relative;
}

.search-lang__block {
  display: none;
}

.search-lang__search-input {
  width: 100%;
  height: 32px;
  background: url("/lp-sipherNEW.github.io/img/search.svg") 11px 50% no-repeat;
  background-color: rgba(0, 0, 0, 0.38);
  border-radius: 37px;
  position: relative;
}

.search-lang__items {
  margin: 12px 0 8px;
}

.search-lang__item {
  font-weight: 400;
  font-size: 18px;
  line-height: 22px;
  margin: 8px 0;
  cursor: pointer;
}

.search-lang__current {
  font-size: 12px;
  line-height: 15px;
  text-align: right;
  color: rgba(255, 255, 255, 0.42);
}

.header__menu {
  z-index: 5;
  display: block;
  position: relative;
  width: 26px;
  height: 20px;
  cursor: pointer;
}

.header__menu span, .header__menu::before, .header__menu::after {
  left: 0;
  position: absolute;
  height: 3.33px;
  width: 100%;
  transition: all .3s ease 0s;
  background-color: #D1EBE5;
  border-radius: 1px;
}

.header__menu::before, .header__menu::after {
  content: "";
}

.header__menu::before {
  top: 0;
}

.header__menu::after {
  bottom: 0;
}

.header__menu span {
  top: 50%;
  transform: scale(1) translate(0px, -50%);
}

.section__tabs {
  background-color: #03262D;
}

.tabs__items {
  display: flex;
  align-items: center;
}

.tabs__items .tabs__item {
  padding: 0 17px 0 23px;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #fff;
  cursor: default;
}

.tabs__items .tabs__item p {
  position: relative;
  z-index: 2;
  font-weight: 400;
  font-size: 18px;
  line-height: 22px;
  letter-spacing: 0.05em;
  padding: 0 20px 0 0;
}

.tabs__items .tabs__item .tab__close {
  cursor: pointer;
}

.tabs__items .tabs__item.active {
  background-color: #072328;
  border-radius: 5px 5px 0 0;
}

.tabs__items .tab__create {
  font-size: 25px;
  line-height: 50%;
  padding: 6px;
  background: #011D22;
  border-radius: 5px;
  margin: 0 10px;
  cursor: pointer;
}

.tabs__content .tabs__block {
  height: calc(100vh - 130px);
  position: relative;
  display: none;
  padding: 20px;
  flex: 18;
  line-height: 24px;
  background-color: #072328;
}

.tabs__content .tabs__block:target {
  display: block;
}

